--- a/2.html
+++ b/2.html
@@ -1,12 +1,12 @@
-Why do the nations rage and the peoples plot in vain?
-The kings of the earth set themselves, and the rulers take counsel together, against the Lord and against his Anointed, saying,
-“Let us burst their bonds apart and cast away their cords from us.”
-He who sits in the heavens laughs; the Lord holds them in derision.
-Then he will speak to them in his wrath, and terrify them in his fury, saying,
-“As for me, I have set my King on Zion, my holy hill.”
-I will tell of the decree: The Lord said to me, “You are my Son; today I have begotten you.
-Ask of me, and I will make the nations your heritage, and the ends of the earth your possession.
-You shall break them with a rod of iron and dash them in pieces like a potter’s vessel.”
-Now therefore, O kings, be wise; be warned, O rulers of the earth.
-Serve the Lord with fear, and rejoice with trembling.
-Kiss the Son, lest he be angry, and you perish in the way, for his wrath is quickly kindled. Blessed are all who take refuge in him.
+Why do the nations rage and the peoples plot in vain?<br>
+The kings of the earth set themselves, and the rulers take counsel together, against the Lord and against his Anointed, saying,<br>
+“Let us burst their bonds apart and cast away their cords from us.”<br>
+He who sits in the heavens laughs; the Lord holds them in derision.<br>
+Then he will speak to them in his wrath, and terrify them in his fury, saying,<br>
+“As for me, I have set my King on Zion, my holy hill.”<br>
+I will tell of the decree: The Lord said to me, “You are my Son; today I have begotten you.<br>
+Ask of me, and I will make the nations your heritage, and the ends of the earth your possession.<br>
+You shall break them with a rod of iron and dash them in pieces like a potter’s vessel.”<br>
+Now therefore, O kings, be wise; be warned, O rulers of the earth.<br>
+Serve the Lord with fear, and rejoice with trembling.<br>
+Kiss the Son, lest he be angry, and you perish in the way, for his wrath is quickly kindled. Blessed are all who take refuge in him.<br>
